# flumes-ai-sdk

./: README.md  pyproject.toml
examples/: demo_chat.py
flumes/: agent.py  client.py  exceptions.py  logger.py  models.py  transport.py
flumes/utils/: openai_wrapper.py
learning/: agent_memory_tutorial_flumes-ai.ipynb  flumes-first-step.ipynb
