[build-system]
requires = ["hatchling>=1.14"]
build-backend = "hatchling.build"

[project]
name = "flumes-ai"
version = "0.1.1"
description = "Flumes – unified memory infrastructure SDK for AI agents"
readme = "README.md"
authors = [
  { name = "Flumes AI", email = "alex@flumes.ai" }
]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2",
  "openai>=1",
  "typing_extensions; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "pytest>=8",
  "pytest-httpx>=0.30",
  "build",
  "twine",
  "hatchling",
]

[tool.hatch.build.targets.wheel]
packages = ["flumes"]
